Update gitignore and npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,5 @@
-/.vscode/
-
-/node_modules/
-
-/.direnv/
-/.envrc
-
-/result
-
-/flake.nix
-/flake.lock
-
-/.gitignore
-/npmignore
-/package.json
-/package-lock.json
+/*
+!/assets
+!/bin
+!/src
+!/package.json
